<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EdytujActivity">

    <data>
        <import
            type="android.text.Html" />
        <variable
            name="notatka"
            type="com.tonia.notatnik.Notatka" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondary"
                android:padding="@dimen/padding_small"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btZapisz"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_margin="@dimen/margin_small"
                        android:onClick="btZapisz_onClick"
                        android:tooltipText="@string/zapisz_btn"
                        android:background="@drawable/button_floppydisc" />

                    <Button
                        android:id="@+id/btAnuluj"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_margin="@dimen/margin_small"
                        android:onClick="btOdrzuc_onClick"
                        android:tooltipText="@string/odrzuc_btn"
                        android:background="@drawable/button_cross" />

                    <Button
                        android:id="@+id/btPogrubienie"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_margin="@dimen/margin_small"
                        android:onClick="btPogrubienie_onClick"
                        android:tooltipText="@string/pogrubienie_btn"
                        android:background="@drawable/button_bold" />

                    <Button
                        android:id="@+id/btKursywa"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_margin="@dimen/margin_small"
                        android:onClick="btKursywa_onClick"
                        android:tooltipText="@string/kursywa_btn"
                        android:background="@drawable/button_italic" />

                    <Button
                        android:id="@+id/btPodkreslenie"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_margin="@dimen/margin_small"
                        android:onClick="btPodkreslenie_onClick"
                        android:tooltipText="@string/podkreslenie_btn"
                        android:background="@drawable/button_underline" />

                    <Button
                        android:id="@+id/btZablokuj"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_margin="@dimen/margin_small"
                        android:enabled="@{!notatka.getZablokowana()}"
                        android:onClick="btZablokuj_onClick"
                        android:tooltipText="@string/zablokuj_btn"
                        android:background="@drawable/button_locked" />

                    <Button
                        android:id="@+id/btOdblokuj"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_margin="@dimen/margin_small"
                        android:enabled="@{notatka.getZablokowana()}"
                        android:onClick="btOdblokuj_onClick"
                        android:tooltipText="@string/odblokuj_btn"
                        android:background="@drawable/button_unlocked" />
                </LinearLayout>

            </HorizontalScrollView>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_big"
                android:layout_marginRight="@dimen/margin_big"
                android:background="@drawable/background_layout"
                android:measureWithLargestChild="true"
                android:stretchColumns="0,1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tvTytul"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/tytul" />

                    <EditText
                        android:id="@+id/etTytul"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@={notatka.tytul}" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tvAutor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/autor" />

                    <EditText
                        android:id="@+id/etAutor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@={notatka.autor}" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvKategoria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/kategoria" />

                    <Spinner
                        android:id="@+id/spKategoria"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </TableRow>
            </TableLayout>

            <EditText
                android:id="@+id/etTekst"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_big"
                android:background="@drawable/background_layout"
                android:gravity="top"
                android:text="@{Html.fromHtml(notatka.tekst)}" />

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</layout>